--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto+Mono';
+
+html,
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+#root {
+  height: 100%;
 }
